added helper method

--- a/app/views/works/_form.html.erb
+++ b/app/views/works/_form.html.erb
@@ -1,42 +1,33 @@
-<%= form_with(model: work, local: true) do |form| %>
-  <% if work.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(work.errors.count, "error") %> prohibited this work from being saved:</h2>
+<%= form_with model: work do |form| %>
+<%#select("post", "person_id", Person.all.collect {|p| [ p.name, p.id ] }%>
+  
 
-      <ul>
-        <% work.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
+  <div class="form-group">
     <%= form.label :category %>
-    <%= form.text_field :category %>
+    <%= form.select :category, Category.all.collect {|c| [c,c]}, {}, class:"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= form.text_field :title, class:"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :creator %>
-    <%= form.text_field :creator %>
+    <%= form.text_field :creator, class:"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :publication_year %>
-    <%= form.text_field :publication_year %>
+    <%= form.text_field :publication_year, class:"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_field :description %>
+    <%= form.text_area :description, class:"form-control" %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class:"btn btn-primary" %>
   </div>
 <% end %>
