added the delete and edit

--- a/app/views/works/_work_table.html.erb
+++ b/app/views/works/_work_table.html.erb
@@ -18,7 +18,7 @@
     <% works.each do |work| %>
       <tr>
         
-        <td><%= work.title %></td>
+        <td><%= link_to work.title,  work_path(work)%></td>
         <td><%= work.creator %></td>
         <td><%= work.publication_year %></td>
        
