--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,195 @@
 @import "bootstrap";
 
 @import "**/*";
+
+.user-votes__container {
+  margin-top: 2rem;
+}
+
+.user-votes__header {
+  color: black;
+}
+
+.works-votes__container {
+  margin-top: 2rem;
+}
+
+.works-votes__header {
+  color: black;
+}
+
+ul {
+  padding:0;
+}
+body,h1, h2, h3, h4, h5 {
+  font-family: "Gudea", sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+  font-weight: bold;
+}
+
+a, h2, h3 {
+  color: #26A69A;
+}
+
+a:hover {
+  color: #00796B;
+  text-decoration: none;
+}
+
+.alert {
+  margin: 0
+}
+
+.btn-primary {
+  background-color: #26A69A;
+  color: white;
+  border-color: #26A69A;
+}
+
+.btn:hover {
+  background-color: #00796B;
+  color: white;
+}
+
+.table td {
+  vertical-align: middle;
+}
+
+.app-header__nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.app-header__nav_item {
+  margin-top: 1rem;
+}
+
+.app-header__nav_item .nav-link {
+  color: #00796B;
+}
+
+.app-header__site-nav-container .app-header__nav_item {
+  margin-right: 2rem;
+}
+
+.app-header__user-nav-container .nav-item {
+  margin-left: 2rem;
+}
+
+.list-group-item {
+  border: none;
+}
+
+.app-header__header {
+  max-width: 100%;
+  background-color: #B2DFDB;
+  margin-bottom: 0.5rem;
+  padding: 2rem 1rem 0.5rem 1rem
+}
+
+.app-header__header h1 {
+  text-align: center;
+  margin: 25px auto 40px auto
+}
+
+.app-header__header h1 a {
+  color: #FF5722;
+  padding-right: 25px;
+  margin-right: 15px;
+  border-right: white 2px solid
+}
+
+.app-header__header h1 small {
+  color: white;
+}
+
+.app-header__header p {
+  margin-bottom: 5px;
+}
+
+.alert__container {
+  margin: 2rem 0 1rem 0;
+}
+
+
+.spotlight {
+  padding: 0 2rem 2rem 2rem;
+}
+
+.spotlight__header {
+  color: #26A69A;
+}
+
+.spotlight__header--prefix {
+  color: #424242;
+}
+
+.spotlight__header--prefix::after {
+  content: ":";
+}
+
+.spotlight__link-to {
+  border-bottom: 2px solid;
+}
+
+.spotlight__description {
+  margin-bottom: 0;
+}
+
+.root__hr {
+  margin: 0px auto 3rem auto;
+  color: #EEEEEE;
+}
+
+.top-ten__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 2em;
+}
+
+.top-ten__header {
+  color: #26A69A;
+  border-bottom: 2px solid;
+  border-bottom-color: #B2DFDB;
+}
+
+.top-ten__list {
+  list-style-type: none;
+  margin-left: 0;
+  padding-left: 0
+}
+
+.top-ten__creator {
+  color: slategrey;
+}
+
+main {
+  padding: 2rem;
+}
+
+table {
+  .vote-column {
+      width:5%;
+  }
+  .title-column {
+      width: 42%;
+  }
+  .creator-column {
+      width: 20%;
+  }
+  .published-column {
+      width: 10%;
+  }
+
+  .upvote-column {
+      width: 12%;
+  }
+  
+  .downvote-column {
+      width: 12%;
+  }
+ 
+}
