added user, vote and the relationship

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,14 @@
            
         </li>
       </ul>
-      
+      <ul class="nav app-header__user-nav-container">
+
+        <li class="nav-item app-header__nav_item">
+        <%= link_to 'Log In', login_path, class:"btn btn-primary" %>
+         
+        </li>
+
+      </ul>
     </nav>
   </header>
 
