--- a/app/assets/stylesheets/works.scss
+++ b/app/assets/stylesheets/works.scss
@@ -1,3 +1,40 @@
 // Place all the styles related to the works controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.table {
+  width: 100%;
+  margin-bottom: 1rem;
+  background-color: transparent;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+.table thead th {
+  vertical-align: bottom;
+  border-bottom: 2px solid #dee2e6;
+}
+
+.table th, .table td {
+  padding: 0.75rem;
+  vertical-align: top;
+  border-top: 1px solid #dee2e6;
+}
+
+th {
+  text-align: inherit;
+}
+
+.table td {
+  vertical-align: middle;
+}
+
+.works-votes__container {
+  margin-top: 2rem;
+}
+
+.works-votes__header {
+  color: black;
+}
