--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -1,8 +1,11 @@
+<main>
 <%= render partial:'work_table', locals: {table_heading: "Albums", works: @albums} %>
 <%= render partial:'work_table', locals: {table_heading: "Books", works: @books} %>
 <%= render partial:'work_table', locals: {table_heading: "Movies", works: @movies} %>
+<%= link_to 'View top media', root_path, class:"btn btn-secondary" %>
+<%= link_to 'Add a new work', root_path, class:"btn btn-primary" %>
 
 
-<br>
 
 <%= link_to 'New Work', new_work_path %>
+</main>
