--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,7 +12,7 @@
       <% @users.each do |user| %>
         <tr>
           <td>
-            <%= link_to user.username, user_path(user.id) %>
+            <%= link_to user.name, user_path(user.id) %>
           </td>
           <td><%= user.votes.count %></td>
           <td><%= user.joined_date.strftime("%B %e, %Y") %></td>
