--- a/app/views/works/_work_table.html.erb
+++ b/app/views/works/_work_table.html.erb
@@ -1,13 +1,15 @@
 
 <h4><%=table_heading%></h4>
 
+
 <table>
   <thead>
     <tr>
-     
+     <th>Votes</th>
       <th>Title</th>
       <th>Created By</th>
       <th>Published</th>
+      <th>Upvote</th>
     
       
     </tr>
@@ -17,10 +19,13 @@
     
     <% works.each do |work| %>
       <tr>
-        
+
+        <td><%= work.votes.count %></td>
         <td><%= link_to work.title,  work_path(work)%></td>
+
         <td><%= work.creator %></td>
         <td><%= work.publication_year %></td>
+        <td><%= link_to 'Upvote', upvote_path(work), method: :patch, class:"btn btn-primary" %></td>
        
        
       </tr>
