--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -1,4 +1,4 @@
-    <section>
+  <section>
   <h2><%= @work.title %></h2>
   <p>Created by: <%= @work.creator%></p>
   <p>Published: <%= @work.publication_year %></p>
@@ -8,7 +8,8 @@
     <%= link_to 'Back to media ranks', root_path, class:"btn btn-primary" %>
     <%= link_to 'Edit', edit_work_path(@work), class:"btn btn-primary" %>
 
-    <!--<a class="btn btn-primary" rel="nofollow" data-method="post" href="/works/771/upvote">Upvote</a> -->
+    
+    <%= link_to 'Upvote', upvote_path(@work), method: :patch, class:"btn btn-primary" %>
     
     <%= link_to 'Delete', work_path(@work), method: :delete, data: {confirm: "Are you sure?"}, class:"btn btn-danger" %>
   </section>
