--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -10,7 +10,7 @@
     
   </div>
   <div class="form-group">
-    <%= form.submit value: "Log in", class:"btn btn-primary" %>
+    <%= form.submit value: "Log in", data: {"disable-with"=> "Log in"}, class:"btn btn-primary" %>
     
   </div>
 <% end %>
